[package]
name = "rsomics-reaching-centrality"
version = "0.1.1"
description = "Global + local reaching centrality (Mones-Vicsek-Vicsek 2012) — value-exact networkx equivalent"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-reaching-centrality"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["centrality", "reaching", "graph", "network", "networkx"]
readme = "README.md"

[[bin]]
name = "rsomics-reaching-centrality"
path = "src/main.rs"

[lib]
name = "rsomics_reaching_centrality"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
